Implement email confirmation feature with multi-step login process. Added EmailConfirmationComponent, updated routing, and integrated email confirmation in the login flow. Adjusted Angular configuration for production environment.

--- a/angular.json
+++ b/angular.json
@@ -38,6 +38,12 @@
           },
           "configurations": {
             "production": {
+              "fileReplacements": [
+                {
+                  "replace": "src/app/Environments/environment.ts",
+                  "with": "src/app/Environments/environment.prod.ts"
+                }
+              ],
               "budgets": [
                 {
                   "type": "initial",
